; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_ratelim.c_bufferevent_update_buckets.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_ratelim.c_bufferevent_update_buckets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent_private = type { %struct.TYPE_5__*, %struct.TYPE_4__ }
%struct.TYPE_5__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_4__ = type { i32 }
%struct.timeval = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent_private*)* @bufferevent_update_buckets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bufferevent_update_buckets(%struct.bufferevent_private* %0) #0 {
  %2 = alloca %struct.bufferevent_private*, align 8
  %3 = alloca %struct.timeval, align 4
  %4 = alloca i32, align 4
  store %struct.bufferevent_private* %0, %struct.bufferevent_private** %2, align 8
  %5 = load %struct.bufferevent_private*, %struct.bufferevent_private** %2, align 8
  %6 = getelementptr inbounds %struct.bufferevent_private, %struct.bufferevent_private* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @event_base_gettimeofday_cached(i32 %8, %struct.timeval* %3)
  %10 = load %struct.bufferevent_private*, %struct.bufferevent_private** %2, align 8
  %11 = getelementptr inbounds %struct.bufferevent_private, %struct.bufferevent_private* %10, i32 0, i32 0
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ev_token_bucket_get_tick_(%struct.timeval* %3, i32 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.bufferevent_private*, %struct.bufferevent_private** %2, align 8
  %18 = getelementptr inbounds %struct.bufferevent_private, %struct.bufferevent_private* %17, i32 0, i32 0
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %16, %22
  br i1 %23, label %24, label %36

24:                                               ; preds = %1
  %25 = load %struct.bufferevent_private*, %struct.bufferevent_private** %2, align 8
  %26 = getelementptr inbounds %struct.bufferevent_private, %struct.bufferevent_private* %25, i32 0, i32 0
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  %29 = load %struct.bufferevent_private*, %struct.bufferevent_private** %2, align 8
  %30 = getelementptr inbounds %struct.bufferevent_private, %struct.bufferevent_private* %29, i32 0, i32 0
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @ev_token_bucket_update_(%struct.TYPE_6__* %28, i32 %33, i32 %34)
  br label %36

36:                                               ; preds = %24, %1
  ret void
}

declare dso_local i32 @event_base_gettimeofday_cached(i32, %struct.timeval*) #1

declare dso_local i32 @ev_token_bucket_get_tick_(%struct.timeval*, i32) #1

declare dso_local i32 @ev_token_bucket_update_(%struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
